--- a/index.html
+++ b/index.html
@@ -5,49 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Commune</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500;600&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="menu">
-            <h1><a href="#"><img src="/Assets/Logo.svg" alt="Logo Commune" class="menu__logo"></a></h1>
-            <ul>
-                <li><a href="#" class="lista__link">Features</a></li>
-                <li><a href="#" class="lista__link">Affiliates</a></li>
-                <li><a href="#" class="lista__link">Pricing</a></li>
-                <li><a href="#" class="lista__link">Communities</a></li>
-                <li><a href="#" class="lista__link">Join Waitlist</a></li>
-            </ul>
+            <section class="container nav__container">
+                <h1><a href="#"><img src="Assets/Logo.svg" alt="Logo Commune" class="menu__logo"></a></h1>
+                <ul class="nav__lista">
+                    <li><a href="#" class="lista__link">Features</a></li>
+                    <li><a href="#" class="lista__link">Affiliates</a></li>
+                    <li><a href="#" class="lista__link">Pricing</a></li>
+                    <li><a href="#" class="lista__link">Communities</a></li>
+                    <li><a href="#" class="lista__link" id="botao">Join Waitlist</a></li>
+                </ul>
+            </section>
         </nav>
     </header>
     <main>
-        <section class="container">
+        <section class="container container__main">
             <div class="container__texto">
                 <p class="content__earlyacess">We are now allowing early-access for users. <a href="#">Learn more.</a></p>
-                <h2>Build a highly engaged community with no effort.</h2>
+                <h2 class="content__title">Build a highly engaged community with no effort.</h2>
                 <p class="content">Commune offers the tools you need to build a highly engaged community with little to no effort. Simply setup your Commune workspace, and manage everything from members to content from one central dashboard.</p>
                 <label for="label-email">
                     <input type="email" id="label-email" placeholder="Enter your e-mail adress">
                 </label>
-                <a class="botao" href="#">Join Waitlist</a>
+                <a id="botao" href="#">Join Waitlist</a>
             </div>
-            <img src="/Assets/Illustration.png" alt="Illustration" class="container__img">
+            <img src="Assets/Illustration.png" alt="Illustration" class="container__img">
         </section>
     </main>
     <footer>
+        <section class="container container__footer">
         <h3>Used by these Companies</h3>
-        <ul class="patrocinios">
-            <li><img src="/Assets/Atlassian Icon.svg" alt=""></li>
-            <li><img src="/Assets/Behance Icon.svg" alt=""></li>
-            <li><img src="/Assets/Bing Icon.svg" alt=""></li>
-            <li><img src="/Assets/Bitbucket Icon.svg" alt=""></li>
-            <li><img src="/Assets/Dropbox Icon.svg" alt=""></li>
-            <li><img src="/Assets/Twitch Icon.svg" alt=""></li>
-            <li><img src="/Assets/Twitter Icon.svg" alt=""></li>
-        </ul>
+            <ul class="patrocinios">
+                <li><img src="Assets/Atlassian Icon.svg" alt=""></li>
+                <li><img src="Assets/Behance Icon.svg" alt=""></li>
+                <li><img src="Assets/Bing Icon.svg" alt=""></li>
+                <li><img src="Assets/Bitbucket Icon.svg" alt=""></li>
+                <li><img src="Assets/Dropbox Icon.svg" alt=""></li>
+                <li><img src="Assets/Twitch Icon.svg" alt=""></li>
+                <li><img src="Assets/Twitter Icon.svg" alt=""></li>
+            </ul>
+        </section>
     </footer>
     
 </body>
